dark mode, and fix ts

--- a/frontend/src/components/DebugOverlayComponent.css
+++ b/frontend/src/components/DebugOverlayComponent.css
@@ -1,4 +1,5 @@
 .text {
   text-align: left;
   font-size: 11px;
+  color: white;
 }
